--- a/CourseWork/style.css
+++ b/CourseWork/style.css
@@ -1,41 +1,117 @@
 body {
-    
-  background: url('disco.jpg');
-  opacity: 0.5;
+
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
-  filter: blur(1px);
-}
-.main {
-    /* filter: blur(-1px); */
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    width: 70vw;
-    height: 70vh;
-    background-color: rgb(0, 124, 248);
-    opacity: 0.5;
-    padding: 15px;
-    border-radius: 15px;
-    position: relative;
-}
-audio {
-    margin-bottom: 65px;
+  /* align-items: center; */
+  background-image: 'url(pa)';
 }
 
+.background {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  /* filter: blur(3px); */
+
+
+}
+
+.main {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  width: 70vw;
+  height: 70vh;
+  background-color: rgba(232, 232, 232, 0.753);
+  /* opacity: 1; */
+  padding: 15px;
+  border-radius: 15px;
+  position: relative;
+
+}
+
+
 .wrap {
-    margin-top: 80px;
+  margin-top: 80px;
   max-width: 100vw;
   display: flex;
   align-items: center;
   position: relative;
   justify-content: center;
+
 }
-.wrap::before {
-    content: '';
-    position: absolute;
-    left: 0; right: 0; top: 0; bottom: 0;
-    z-index: -1;
-    filter: blur(5px);
+
+/* .wrap::before { */
+/* content: ''; */
+/* position: absolute; */
+/* left: 0; right: 0; top: 0; bottom: 0; */
+/* z-index: -1; */
+/* filter: blur(5px); */
+/* } */
+
+[id=play] img {
+
+
+  width: 45px;
+  height: 40px;
+
 }
+
+[id=play] {
+  margin-bottom: 35px;
+  border-radius: 50%;
+}
+
+.back__icon {
+  width: 30px;
+  height: 25px;
+  margin-bottom: 40px;
+  margin-right: 15px;
+
+}
+
+.next__icon {
+  width: 30px;
+  height: 25px;
+  margin-bottom: 40px;
+  margin-left: 11px;
+}
+
+button {
+  background: none;
+  outline: none;
+  border: none;
+}
+
+.progress-bar {
+  width: 350px;
+  height: 3px;
+  display: flex;
+  bottom: 5%;
+  position: absolute;
+  background: rgb(255, 255, 255);
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.progress-bar__filling {
+  height: 3px;
+  width: 2.7px;
+  background-color: rgb(104, 105, 103);
+  position: relative;
+  border-radius: 25px;
+  margin-bottom: 16px;
+  /* z-index: 5; */
+}
+
+/* .progress-bar__handle{
+  bottom: 16px;
+  width: 3px;
+  height: 10px;
+  border-radius: 55px;
+  /* z-index: 4; */
+/* background-color:rgb(22, 7, 4); */
+/* margin-left: -4px; */
+/* transform: scale(2); */
+/* } */
