--- a/SPA/css/fotns.css
+++ b/SPA/css/fotns.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "GothamProRegular";
-    src: url("../fonts/GothamProRegular/GothamProRegular.eot");
+    src: url("../fonts/GothamProRegular.eot");
     src: url("../fonts/GothamProRegular/GothamProRegular.eot?#iefix")format("embedded-opentype"),
     url("../fonts/GothamProRegular/GothamProRegular.woff") format("woff"),
     url("../fonts/GothamProRegular/GothamProRegular.ttf") format("truetype");
@@ -50,10 +50,10 @@
 
 @font-face {
     font-family: "RobotoBold";
-    src: url("../fonts/RobotoBold/RobotoBold.eot");
-    src: url("../fonts/RobotoBold/RobotoBold.eot?#iefix")format("embedded-opentype"),
-    url("../fonts/RobotoBold/RobotoBold.woff") format("woff"),
-    url("../fonts/RobotoBold/RobotoBold.ttf") format("truetype");
+    src: url("./fonts/RobotoBold/RobotoBold.eot");
+    src: url("./fonts/RobotoBold/RobotoBold.eot?#iefix")format("embedded-opentype"),
+    url("./fonts/RobotoBold/RobotoBold.woff") format("woff"),
+    url("./fonts/RobotoBold/RobotoBold.ttf") format("truetype");
     font-style: normal;
     font-weight: normal;
 }
