--- a/SPA/css/style.css
+++ b/SPA/css/style.css
@@ -1,4 +1,5 @@
-@import '/SPA/css/fotns.css';
+/* @import '../css/fotns.css'; */
+@import '../css/fotns.css';
 
 /* 
 width 1366
@@ -6,15 +7,18 @@ heght 654
 */
 html {
     font-size: 100%;
-    /* width: 100%; */
+    overflow-x: hidden;
 }
 
 body {
     box-sizing: border-box;
-    font-size: 1rem;
-    font-family: Roboto;
+    /* font-size: 1; */
+    font-family: 'RobotoRegular';
     background: #F8F8F8;
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    position: relative;
 }
 
 * {
@@ -26,44 +30,105 @@ body {
 
 .container {
     max-width: 1080px;
-    margin: 0 auto;
+    margin: 0 10%;
+
 }
 
 .header {
-    background: url(../images/header-bg.jpg) ;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover; 
-    height: 680px;
+    height: 100vh;
+    padding: 2% 2% ;
 }
 
-.header--out-style {
-    margin: 26px;
+
+.wrap {
+    width: 100%;
+    height: 100%;
+    background: no-repeat 70%/cover url(../images/header-bg.jpg);
+    /* background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;  */
     border-radius: 24px;
 }
 
+.header__inner {
+    position: relative;
+}
+@media (max-width: 480px) {
+    .header__logo .logo{
+
+    }
+    .header__inner {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+}
+
+
 .header__logo {
-    padding: 42px 0px 0px 0px;
+    position: absolute;
+    top: 35px;
+    display: inline-block;
+    
+}
+
+.header__content {
+    position: relative;
 }
 
 .header__title {
-    margin: 92px 0 24px 0;
     font-family: 'GothamProBold', sans-serif;
-    font-size: 54px;
+    font-size: 54px;;
     line-height: 110%;
-    width: 531px;
+    width: 100%;
     color: #FFFFFF;
-
+    position: absolute;
+    top: 240px;
+}
+@media (max-width: 768px) {
+    .header__title {
+        font-size: 44px;
+    }
+}
+@media (max-width:480px) {
+    .header__title {
+        font-size: 36px;
+        text-align: center;
+        top: 255px;
+        flex-grow: .5;
+    }
 }
 
+
+
 .header__desc {
-    width: 531px;
+    width: 70%;
     font-size: 24px;
     line-height: 133%;
     font-family: 'GothamProBold', sans-serif;
     color: #F8F8F8;
     margin-bottom: 56px;
+    position: absolute;
+    top: 400px;
 }
+@media (max-width: 992px) {
+    .header__desc {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    .header__desc {
+        font-size: 18px;
+        text-align: center;
+        top: 370px;
+        width: 100%;
+    }
+}
+
+
 
 .header__btn {
     color: #FFFFFF;
@@ -72,11 +137,28 @@ body {
     font-size: 14px;
     line-height: 140%;
     font-family: 'GothamProMedium', sans-serif;
-    width: 198px;
+    min-width: 198px;
     height: 48px;
     border-radius: 26px;
     cursor: pointer;
     text-transform: uppercase;
+    display: inline-block;
+    margin-top: 511px;
+
+}
+
+@media (max-width: 768px) {
+    .header__btn{
+        margin-top: 530px;
+    }
+}
+@media (max-width: 480px) {
+    .header__btn{
+        text-align: center;
+        margin: 480px auto 0 auto;
+        align-content: center;
+        vertical-align: middle;
+    }
 }
 
 .accordion {
@@ -127,77 +209,177 @@ body {
 
 .ingredients {
     padding: 32px 0 32px 0;
+    display: flex;
+    flex-direction: column;
+    /* align-items: flex-start; */
 }
 
 
 .ingredients__title {
-    width: 531px;
+    width: 70%;
     font-size: 24px;
     line-height: 133%;
     font-family: 'GothamProBold', sans-serif;
     color: #70544F;
     margin-bottom: 56px;
+    
 }
+@media (max-width: 1080px) {
+    .ingredients__title {
+        text-align: center;
+        align-self: center;
+    }
+}
+@media (max-width: 768px) {
+    .ingredients__title {
+        width: 70%;
+        font-size: 20px;
+    }
+}
+
 
 .ingredients__items {
     display: grid;
-    grid-template-columns: 532px 532px;
+    /* 532px */
+    grid-template-columns: repeat(2, 530px);
     grid-template-rows: 156px;
-    grid-column-gap: 14px;
-    grid-row-gap: 27px;
-    /* justify-content: center; */
+    grid-gap: 27px 14px;
+    justify-content: center;
 }
+@media (max-width: 1200px) {
+    .ingredients__items {
+        grid-template-columns: 512px 512px;
+    }
+}
+
+@media (max-width: 1080px) {
+    .ingredients__items {
+        /* 512px 512px */
+        grid-template-columns: calc(100% - 35px);
+    }
+}
+
+
+@media (max-width: 768px) {
+    .ingredients__items {
+        grid-template-rows: repeat(2, 1fr);
+    }
+}
+
+
 
 .ingredients__item {
     padding: 32px 112px 32px 32px;
     background-color: #FFFFFF;
     position: relative;
     border-radius: 6px;
+    
 }
+
+.ingredients__item-img {
+    display: none;
+}
+
+@media (max-width: 1200px) {
+    .ingredients__item {
+        padding: 32px 40px 32px 27px;
+    }
+    .ingredients__item::before {
+        left:75%;
+    }
+    
+}
+
+@media (max-width: 1080px) {
+    .ingredients__item {
+        padding: 22px 10px 22px 27px;
+        /* display: none; */
+    }
+}
+
+
+@media (max-width: 768px) {
+
+    .ingredients__item-text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+}
+
+
 
 .ingredients__item:nth-child(1)::before {
     content: '';
     width: 100%;
     height: 100%;
-    background-image: url("/SPA/images/chesses-1.svg");
+    background-image: url("../images/chesses-1.svg");
     background-repeat: no-repeat;
     position: absolute;
     top: 20px;
-    left: 440px;
+    left:82%;
 }
 
 .ingredients__item:nth-child(2)::before {
     content: '';
     width: 100%;
     height: 100%;
-    background-image: url("/SPA/images/tomato-2.svg");
+    background-image: url("../images/tomato-2.svg");
     background-repeat: no-repeat;
     position: absolute;
     top: 20px;
-    left: 440px;
+    left:82%;
 }
 
 .ingredients__item:nth-child(3)::before {
     content: '';
     width: 100%;
     height: 100%;
-    background-image: url("/SPA/images/dought-3.svg");
+    background-image: url("../images/dought-3.svg");
     background-repeat: no-repeat;
     position: absolute;
     top: 20px;
-    left: 440px;
+    left:82%;
 }
 
 .ingredients__item:nth-child(4)::before {
     content: '';
     width: 100%;
     height: 100%;
-    background-image: url("/SPA/images/ingredients-4.svg");
+    background-image: url("../images/ingredients-4.svg");
     background-repeat: no-repeat;
     position: absolute;
     top: 20px;
-    left: 440px;
+    left:82%;
 }
+@media (max-width:768px) {
+    .ingredients__item {
+        display: flex;
+        flex-direction: column;  
+        padding: 15px 15px 15px 15px; 
+    }
+
+    .ingredients__item:nth-child(3) .ingredients__item-text {
+        margin-bottom: 15px;
+    }
+
+    .ingredients__item:nth-child(2) {
+        padding: 20px;
+    }
+
+    .ingredients__item::before {
+        display: none;
+    }
+
+    .ingredients__item-img {
+        display: block;
+    }
+
+    
+}
+
+
 
 .ingredients__item-title {
     font-size: 18px;
@@ -207,6 +389,13 @@ body {
     height: 24px;
     margin-bottom: 8px;
 }
+@media (max-width: 768px) {
+    .ingredients__item-title {
+        font-weight: normal;
+        text-align: center;
+    }
+}
+
 
 .ingredients__text {
     width: 388px;
@@ -215,20 +404,55 @@ body {
     line-height: 140%;
     color: #70544F;
 }
+@media (max-width: 1200px) {
+    .ingredients__text {
+        
+        height: 40%;
+    }
+} 
+@media (max-width: 768px) {
+    .ingredients__text {
+        text-align: center;
+        height: 100%;
+        width: 100%;
+    }
+}
+
 
 .authorization {
-    background: url(/SPA/images/right-top-bg.jpg) right top no-repeat,
-        url(/SPA/images/right-bot-bg.jpg) right 80% no-repeat,
-        url(/SPA/images/middle-bg.jpg) 54% top no-repeat,
-        url(/SPA/images/middle-dots-bg.jpg) 40% 60% no-repeat,
-        url(/SPA/images/bott-middle-bg.jpg) 35% 99% no-repeat,
-        url(/SPA/images/left-bg.jpg) 0% 15% no-repeat,
-        url(/SPA/images/left-bot-bg.jpg) 0% 99% no-repeat, #FFFFFF;
+    background: url(/images/right-top-bg.png) right top no-repeat,
+        url(/images/right-bot-bg.png) right center no-repeat,
+        url(/images/image.png) 4% top no-repeat,
+        url(/images/middle-dots-bg.png) 40% 60% no-repeat,
+        url(/images/bot-middle-bg.png) 35% 99% no-repeat,
+        url(/images/left-bg.png) -5% 15% no-repeat,
+        url(/images/left-bot-bg.png) -219% -335% no-repeat, #FFFFFF;
 }
+@media (max-width: 1080px) {
+    .authorization {
+        background: url(/images/right-top-bg.png) right top no-repeat,
+            url(/images/right-bot-bg.png) right center no-repeat,
+            url(/images/image.png) 15% top no-repeat,
+            url(/images/middle-dots-bg.png) 40%h 60% no-repeat,
+            url(/images/bott-middle-bg.png) 35% 99% no-repeat,
+            url(/images/left-bg.png) 0% 15% no-repeat,
+            url(/images/left-bot-bg.png) 0% 99% no-repeat, #FFFFFF;
+    }
+}
+
 
 .authorization__inner {
     display: flex;
+    margin: 0 auto;
 }
+@media (max-width: 1200px) {
+    .authorization__inner {
+        flex-direction: column;
+        align-items: center;
+    }
+
+}
+
 
 .authorization__title {
     width: 420px;
@@ -239,6 +463,24 @@ body {
     color: #70544F;
     margin: 117px 128px 25px 0;
 }
+@media (max-width: 768px) {
+    .authorization__title {
+        font-size: 25px;
+        width: 70%;
+        margin:  0;
+    }
+    .authorization {
+        background: url(/images/right-top-bg.png) -35% top no-repeat,
+            url(/images/right-bot-bg.png) right center no-repeat,
+            /* url(/images/image.png) 15% top no-repeat; */
+            /* url(/images/middle-dots-bg.png) 40% 60% no-repeat; */
+            /* url(/images/bott-middle-bg.png) 35% 99% no-repeat; */
+            url(/images/left-bg.png) -3% 75% no-repeat;
+            /* url(/images/left-bot-bg.png) 0% 99% no-repeat, #FFFFFF; */
+        /* background: none; */
+        }
+
+}
 
 .authorization__text {
     font-family: "Roboto", sans-serif;
@@ -246,6 +488,24 @@ body {
     width: 395px;
     color: #A69895;
 }
+@media (max-width: 768px) {
+    .authorization__content {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 5%;
+
+    }
+}
+@media (max-width: 768px) {
+    .authorization__text {
+        font-size: 14px;
+        margin-top: 15px;
+        width: 100%;
+    }
+}
+
 
 .authorization__form {
     width: 532px;
@@ -257,15 +517,42 @@ body {
     padding: 43px 40px 0px 40px;
     box-sizing: border-box;
 }
+@media (max-width: 768px) {
+
+    .authorization__form {
+        padding: 23px 20px 0px 20px;
+        /* padding: 0; */
+        width: 75%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 50px 0 10px 0;
+        padding: 43px 40px 0px 40px;
+    }   
+}
+@media (max-width: 480px) {
+    .authorization__form {
+        width: 85%;
+
+    }   
+}
+
+
 
 .authorization__label {
     display: block;
     font-size: 14px;
-    line-height: 140%;
     color: #ffffff;
     margin-bottom: 5px;
     margin-top: 16px;
+    font-family: "RobotoRegular",sans-serif;
 }
+@media (max-width: 768px) {
+    .authorization__label {
+        font-size: 12px;
+    }
+}
+
 
 .authorization__label:first-child {
     margin-top: 0;
@@ -282,12 +569,23 @@ body {
     padding: 14px 16px 13px 16px;
 }
 
+
 .authorization__input::placeholder {
     color: rgba(255, 255, 255);
     font-size: 16px;
     opacity: 0.7;
 }
-
+@media (max-width: 768px) {
+    .authorization__input {
+        /* padding: 14px 6px 13px 11px; */
+        padding: 0;
+        display: inline-block;
+        width: 100%;
+    }
+    .authorization__input::placeholder {
+        padding-left: 15px;
+    }
+}   
 .authorization__btn {
     padding: 15px 24px 13px 24px;
     font-size: 14px;
@@ -323,6 +621,20 @@ body {
     display: flex;
     justify-content: space-between;
 }
+@media (max-width: 768px) {
+    .footer__inner {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+}
+@media (max-width: 480px) {
+    .footer__inner {
+        justify-content: space-between;
+        /* align-items: center; */
+    }
+}
+
 
 .footer__copy {
     font-family: 'Roboto', sans-serif;
@@ -337,9 +649,27 @@ body {
 .footer__list {
     display: flex;
 }
+@media (max-width: 768px) {
+    .footer__list {
+        flex-direction: column;
+        /* align-items: center; */
+        text-align: center;
+    }
+    .footer__copy {
+        margin:15px 15px 15px 0;
+        width: 50%;
+        height: 100%;
 
+    }
+}
 .footer__item {
     margin: 24px 24px 24px 0;
+}
+@media (max-width: 768px) {
+    .footer__item {
+        margin: 0px;
+        margin-bottom: 5px;
+    }
 }
 
 .footer__item:last-child {
@@ -355,176 +685,10 @@ body {
 
 
 /*  media queries */
+/* 320, 460, 520, 600, 768, 1024 and 1280
 
-
-@media screen and (max-width: 1180px) {
-    .header__inner {
-        padding: 40px;
-    }
-
-    .ingredients__items {
-        display: grid;
-        grid-template-columns: 50%;
-        grid-template-rows: 136px;
-        grid-column-gap: 11px;
-        grid-row-gap: 17px;
-        justify-content: center;
-        flex-wrap: wrap;
-        
-    }
-    .ingredients {
-        
-        /* flex-direction: column; */
-        justify-content: center;
-        align-items: center;
-    }
-    .ingredients__title {
-        display: inline-block;
-        margin-left: 3.3%;
-        margin-right: auto;
-        margin-left: auto;
-        text-align: center;
-        margin: auto;
-        /* padding-left: 13%; */
-    }
-    
-    .ingredients__item{
-        padding: 28px 112px 28px 28px;    
-    }
-    
-    .ingredients__item:nth-child(1)::before {
-        content: '';
-        width: 100%;
-        height: 100%;
-        background-image: url("/SPA/images/chesses-1.svg");
-        background-repeat: no-repeat;
-        position: absolute;
-        top: 20px;
-        left: 410px;
-    }
-
-    .ingredients__item:nth-child(2)::before {
-        content: '';
-        width: 100%;
-        height: 100%;
-        background-image: url("/SPA/images/tomato-2.svg");
-        background-repeat: no-repeat;
-        position: absolute;
-        top: 20px;
-        left: 410px;
-    }
-
-    .ingredients__item:nth-child(3)::before {
-        content: '';
-        width: 100%;
-        height: 100%;
-        background-image: url("/SPA/images/dought-3.svg");
-        background-repeat: no-repeat;
-        position: absolute;
-        top: 20px;
-        left: 410px;
-    }
-    
-    .ingredients__item:nth-child(4)::before {
-        content: '';
-        width: 100%;
-        height: 100%;
-        background-image: url("/SPA/images/ingredients-4.svg");
-        background-repeat: no-repeat;
-        position: absolute;
-        top: 20px;
-        left: 410px;
-    }
-
-    .ingredients__item-title {
-        font-size: 18px;
-        line-height: 133%;
-        color: #70544F;
-        font-family: 'GothamProBold', sans-serif;
-        height: 24px;
-        margin-bottom: 8px;
-    }
-
-    .ingredients__text {
-        width: 372px;
-        height: 60px;
-        font-size: 14px;
-        line-height: 140%;
-        color: #70544F;
-    }
-    
-
-}
-
-@media screen and (max-width: 770px) {
-
-    .header__title {
-        font-size: 44px;
-    }
-
-    .header__desc { 
-        font-size: 19px;
-    }
-
-    .header__btn {
-        font-size: 12px;
-        width: 178px;
-        height: 48px;
-    }
-
-
-}
-
-@media screen and (max-width:600px) {
-    .header__title {
-        font-size: 34px;
-    }
-
-    .header__desc { 
-        font-size: 15px;
-    }
-}
-
-@media screen and (max-width:550px) {
-    .header__desc { 
-        font-size: 15px;
-        width: 100%;
-    }
-
-}
-
-@media screen and (max-width:400px) {
-    .header {
-        border-radius: 0;
-        height: 100vh;
-        width: 100vw;
-        margin: 0;
-    }
-    
-    .header__logo {
-        margin: 0;
-        padding: 0;
-    }
-
-    .accordion {
-        top: 7%;
-        right: 8%;
-    }
-
-    .container {
-        width: 100%;
-        margin: 0;
-        background-position: center;
-        background-size: 10% 10%;
-    }
-
-    .header__title {
-        font-size: 29px;
-        width: 100%;
-    }
-
-    .header__desc { 
-        font-size: 13px;
-    }
-
-}
+@custom-media --viewport-4 (min-width: 480px);
+@custom-media --viewport-7 (min-width: 768px);
+@custom-media --viewport-9 (min-width: 992px);
+@custom-media --viewport-12 (min-width: 1200px);
+*/
